idea/static/styles.css
/* ... */
.modal-login {
  display: none; /* Hidden by default */
  position: fixed; /* Stay in place */
  z-index: 1000; /* Sit on top */
  padding-top: 100px; /* Location of the box */
  left: 0;
  top: 0;
  width: 100%; /* Full width */
  height: 100%; /* Full height */
  overflow: auto; /* Enable scroll if needed */
}

/* Modal Content */
.modal-content {
  position: relative;
  margin: auto;
  padding: 20px;
  width: 80%;
  background: #080808;
  opacity: 0.95;
}

/* The Close Button */
.close {
  position: absolute;
  top: 0;
  right: 0;
  padding-right: 10px;
  font-size: 28px;
  font-weight: bold;
}

.close:hover,
.close:focus {
  color: #fff;
  text-decoration: none;
  cursor: pointer;
}

.header {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
}

#text {
  position: absolute;
  font-size: 5em;
  color: #fff;
  text-shadow: 8px 8px 5px rgb(6, 23, 106);
  z-index: 2;
}

.header #pic2 {
  position: absolute;
  top: 0;
  left: 0;
  width: 50%;
  height: 100vh;
  pointer-events: none;
}

.header #pic1 {
  position: absolute;
  top: 0;
  right: 0;
  width: 50%;
  height: 100vh;
  pointer-events: none;
  -webkit-transform: scaleX(-1);
  transform: scaleX(-1);
}

section {
  display: flex;
  justify-content: center;
  align-items: center;
  min-height: 100vh;
  width: 100%;
}

.form-box,
.index-form-box {
  position: relative;
  width: 400px;
  height: 450px;
  background: transparent;
  border: 2px solid rgba(255, 255, 255, 0.5);
  box-shadow: 0 0 30px rgb(6, 23, 106);
  border-radius: 20px;
  backdrop-filter: blur(15px);
  display: flex;
  justify-content: center;
  align-items: center;
}

.form-index {
  display: flex;
  flex-direction: column;
}

.form-index button {
  align-self: center;
  margin-top: 15px;
}

.form-index input {
  align-self: center;
  width: fit-content;
}

.form2-cont,
.stats-cont,
.rating {
  color: white;
}

.stats-cont {
  width: 90%;
  margin: auto auto;
  border: 2px solid rgba(255, 255, 255, 0.5);
  box-shadow: 0 0 30px rgb(6, 23, 106);
  backdrop-filter: blur(15px);
  margin-bottom: 20px;
  margin-top: 20px;
  border-radius: 10px;
  padding: 10px;
}

.stats-cont:hover {
  box-shadow: 0 0 20px white; /* Increase the shadow size on hover */
}

.stats-info {
  padding: 10px;
}

.form2-cont {
  display: flex;
  justify-content: center;
  margin-top: 5rem;
}

.input-field {
  color: black;
  background-color: white;
  opacity: 0.8;
}

#message,
#existing_note,
.highlight-note {
  color: black;
}

.dropdown {
  color: black;
}

h2 {
  font-size: 2em;
  color: #fff;
  text-align: center;
}

.inputbox {
  position: relative;
  margin: 30px 0;
  width: 310px;
  border-bottom: 2px solid #fff;
}

.inputbox label {
  position: absolute;
  top: 50%;
  left: 5px;
  transform: translateY(-50%);
  color: #fff;
  font-size: 1em;
  pointer-events: none;
  transition: 0.5s;
}

input:focus ~ label,
input:valid ~ label {
  top: -5px;
}

.inputbox input {
  width: 100%;
  height: 50px;
  background: transparent;
  border: none;
  outline: none;
  font-size: 1em;
  padding: 0 35px 0 5px;
  color: #fff;
}

.inputbox ion-icon {
  position: absolute;
  right: 8px;
  color: #fff;
  font-size: 1.2em;
  top: 20px;
}

.forget {
  margin: -15px 0 15px;
  font-size: 0.9em;
  color: #fff;
  display: flex;
  justify-content: space-around;
}

.forget label input {
  margin-right: 3px;
}

.forget label a {
  color: #fff;
  text-decoration: none;
}

.forget a {
  color: #fff;
  text-decoration: none;
}

.forget label a:hover {
  text-decoration: underline;
}

button {
  width: 100%;
  height: 40px;
  border-radius: 40px;
  background: #fff;
  border: none;
  outline: none;
  cursor: pointer;
  font-size: 1em;
  font-weight: 600;
}

.register {
  font-size: 0.9em;
  color: #fff;
  text-align: center;
  margin: 25px 0 10px;
}

.register p a {
  text-decoration: none;
  color: #fff;
  font-weight: 600;
}

.register p a:hover {
  text-decoration: underline;
}

/* FOOTER */
.custom-shape-divider-bottom-1682661039 {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  overflow: hidden;
  line-height: 0;
}

.custom-shape-divider-bottom-1682661039 svg {
  position: relative;
  display: block;
  width: calc(138% + 1.3px);
  height: 209px;
}

.custom-shape-divider-bottom-1682661039 .shape-fill {
  fill: rgb(6, 20, 90);
}

.footer-cont {
  position: relative;
  margin-top: 150px;
}

.name {
  position: relative;
  margin-bottom: 20px;
  color: white;
}

.name a {
  text-decoration: none;
}

.footer-links a,
.footer-links img {
  padding: 10px;
}

.footer-links img {
  position: relative;
}

/* INDEX CSS */

.h1,
.h2 {
  font-size: 5em;
  color: rgb(6, 23, 106);
  text-shadow: 1px 1px 5px #fff;
  z-index: 100;
}

.h3,
.h4 {
  color: white;
  text-shadow: 3px 3px 5px rgb(6, 23, 106);
  opacity: 0.7;
  z-index: 100;
  font-weight: bold;
}

/* .container {
  position: absolute;
  top: 50%;
  left: 50%;
  -moz-transform: translateX(-50%) translateY(-50%);
  -webkit-transform: translateX(-50%) translateY(-50%);
  transform: translateX(-50%) translateY(-50%);
} */

.cont-index {
  display: flex;
  height: 100vh;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.you-link {
  color: white;
}

.you-link:hover {
  color: gray;
}

.toggle_wrapper {
  display: flex;
  flex: 100%;
  flex-direction: column;
  justify-content: center;
  color: white;
  font-weight: bold;
  padding: 1rem;
}

#wrap_toggle {
  width: 100%;
  height: 35px;
  line-height: 35px;
  background: transparent;
  color: white;
  font-weight: bold;
  font-variant: small-caps;
  text-decoration: none;
}

.creator-cards {
  display: flex;
  justify-content: center;
}

.card-cont {
  width: 60%;
  background-color: transparent;
  backdrop-filter: blur(15px);
  color: #333; /* Use a dark gray text color */
  margin: 50px;
  border-radius: 10px;
  border: 2px solid rgba(255, 255, 255, 0.5);
  box-shadow: 30px -50px rgba(255, 255, 255, 0.5);
}
/* ... */

